fixed footer overlap in my contacts

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,7 +41,7 @@ header{
 
 footer{
     justify-content: center;
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
 }
